--- a/envoy_configs/servers/zone_a_2.yml
+++ b/envoy_configs/servers/zone_a_2.yml
@@ -21,16 +21,15 @@ static_resources:
           codec_type: AUTO
           route_config:
             name: local_route
-            virtual_hosts: []
+            virtual_hosts:
+            - name: local_service
+              domains: ["*"]
+              routes:
+              - match:
+                  prefix: '/'
+                direct_response:
+                  status: 200
+                  body:
+                    inline_string: 'zone A server 2'
           http_filters:
-          - name: envoy.filters.http.lua
-            typed_config:
-              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
-              inline_code: '
-                function envoy_on_request(request_handle)
-                  request_handle:respond(
-                    {[":status"] = "200"},
-                    "zone A")
-                end
-              '
           - name: envoy.filters.http.router
