--- a/cross_zone/envoy_configs/clients/zone_a_1.yml
+++ b/cross_zone/envoy_configs/clients/zone_a_1.yml
@@ -53,11 +53,6 @@ static_resources:
               socket_address:
                 address: 127.0.0.1
                 port_value: 8000
-        - endpoint:
-            address:
-              socket_address:
-                address: 127.0.0.1
-                port_value: 8001
       - locality:
           zone: 'zone_b'
         lb_endpoints:
@@ -85,11 +80,6 @@ static_resources:
               socket_address:
                 address: envoy_server_a_1
                 port_value: 8001
-        - endpoint:
-            address:
-              socket_address:
-                address: envoy_server_a_2
-                port_value: 8002
       - locality:
           zone: 'zone_b'
         lb_endpoints:
@@ -98,3 +88,8 @@ static_resources:
               socket_address:
                 address: envoy_server_b_1
                 port_value: 8003
+        - endpoint:
+            address:
+              socket_address:
+                address: envoy_server_b_2
+                port_value: 8004
