--- a/disabled/docker-compose.yml
+++ b/disabled/docker-compose.yml
@@ -43,6 +43,17 @@ services:
       - "8003"
     volumes:
       - "./envoy_configs/servers/zone_b_1.yml:/etc/envoy/config.yaml:ro"
+  envoy_server_b_2:
+    image: "envoyproxy/envoy:v1.14.1"
+    command: --config-path /etc/envoy/config.yaml
+    networks:
+      envoymesh:
+        aliases:
+          - envoy_server_b_2
+    expose:
+      - "8003"
+    volumes:
+      - "./envoy_configs/servers/zone_b_2.yml:/etc/envoy/config.yaml:ro"
 
 networks:
   envoymesh: {}
